[gd_scene load_steps=3 format=3 uid="uid://chvpccx37q06d"]

[ext_resource type="Theme" uid="uid://dslvf6ywx6668" path="res://assets/themes/goofyTheme.tres" id="1_nscjo"]
[ext_resource type="Script" path="res://scripts/radio_controller.gd" id="2_8jrd0"]

[node name="radioController" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_nscjo")
script = ExtResource("2_8jrd0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Radio Controlls"

[node name="next_prev" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="next" type="Button" parent="VBoxContainer/next_prev"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "next"

[node name="previous" type="Button" parent="VBoxContainer/next_prev"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "prev"

[node name="Button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "play/pause"

[node name="volumeControls" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="up" type="Button" parent="VBoxContainer/volumeControls"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "v_up"

[node name="down" type="Button" parent="VBoxContainer/volumeControls"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "v_down"

[connection signal="pressed" from="VBoxContainer/next_prev/next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="VBoxContainer/next_prev/previous" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/volumeControls/up" to="." method="_on_up_pressed"]
[connection signal="pressed" from="VBoxContainer/volumeControls/down" to="." method="_on_down_pressed"]
